architectureDesign/PUML/rg-audun_Resources/resourcesJson/linux_backup_testNSG.json
{
  "provisioningState": "Succeeded",
  "resourceGuid": "247b248c-b99e-44f7-8de5-9b4b010c16e5",
  "networkInterfaces": [
    {
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkInterfaces/linux-backup-testVMNic"
    }
  ],
  "defaultSecurityRules": [
    {
      "name": "AllowVnetInBound",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound traffic from all VMs in VNET",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65000,
        "access": "Allow"
      },
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/defaultSecurityRules/AllowVnetInBound",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    },
    {
      "name": "AllowAzureLoadBalancerInBound",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "AzureLoadBalancer",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow inbound traffic from azure load balancer",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65001,
        "access": "Allow"
      },
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/defaultSecurityRules/AllowAzureLoadBalancerInBound",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    },
    {
      "name": "DenyAllInBound",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all inbound traffic",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 65500,
        "access": "Deny"
      },
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/defaultSecurityRules/DenyAllInBound",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    },
    {
      "name": "AllowVnetOutBound",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "VirtualNetwork",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65000,
        "access": "Allow"
      },
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/defaultSecurityRules/AllowVnetOutBound",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    },
    {
      "name": "AllowInternetOutBound",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "Internet",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Allow outbound traffic from all VMs to Internet",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65001,
        "access": "Allow"
      },
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/defaultSecurityRules/AllowInternetOutBound",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    },
    {
      "name": "DenyAllOutBound",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "*",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "Deny all outbound traffic",
        "protocol": "*",
        "direction": "Outbound",
        "priority": 65500,
        "access": "Deny"
      },
      "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/defaultSecurityRules/DenyAllOutBound",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    }
  ],
  "securityRules": [
    {
      "name": "default-allow-ssh",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "*",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "22",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "protocol": "Tcp",
        "direction": "Inbound",
        "priority": 1001,
        "access": "Allow"
      },
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/securityRules/default-allow-ssh",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    },
    {
      "name": "MicrosoftDefenderForCloud-JITRule_1730047975_5C0B6BD3835644F59F9DE2E575618737",
      "properties": {
        "provisioningState": "Succeeded",
        "destinationAddressPrefixes": [],
        "destinationAddressPrefix": "10.0.0.4",
        "destinationPortRanges": [],
        "sourceAddressPrefixes": [],
        "sourceAddressPrefix": "*",
        "destinationPortRange": "22",
        "sourcePortRanges": [],
        "sourcePortRange": "*",
        "description": "MDC JIT Network Access rule for policy 'default' of VM 'linux-backup-test'.",
        "protocol": "*",
        "direction": "Inbound",
        "priority": 1000,
        "access": "Deny"
      },
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/rg-audun/providers/Microsoft.Network/networkSecurityGroups/linux-backup-testNSG/securityRules/MicrosoftDefenderForCloud-JITRule_1730047975_5C0B6BD3835644F59F9DE2E575618737",
      "etag": "W/\"07391abd-c9a1-46c7-93ba-7d928565dfcb\""
    }
  ],
  "flowLogs": [
    {
      "id": "/subscriptions/996465bb-34d8-4c7d-99c1-bab3805301c8/resourceGroups/NetworkWatcherRG/providers/Microsoft.Network/networkWatchers/NetworkWatcher_norwayeast/flowLogs/linux-backup-testNSG-flowlog"
    }
  ]
}
